// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Full height 1`] = `
<div
  className="pf-c-empty-state pf-m-lg pf-m-full-height"
>
  <div
    className="pf-c-empty-state__content"
  >
    <Title
      headingLevel="h3"
      size="md"
    >
      EmptyState large
    </Title>
  </div>
</div>
`;

exports[`EmptyState Main 1`] = `
<div
  className="pf-c-empty-state"
>
  <div
    className="pf-c-empty-state__content"
  >
    <Title
      headingLevel="h5"
      size="lg"
    >
      HTTP Proxies
    </Title>
    <EmptyStateBody>
      Defining HTTP Proxies that exist on your network allows you to perform various actions through those proxies.
    </EmptyStateBody>
    <Button
      variant="primary"
    >
      New HTTP Proxy
    </Button>
    <EmptyStateSecondaryActions>
      <Button
        aria-label="learn more action"
        variant="link"
      >
        Learn more about this in the documentation.
      </Button>
    </EmptyStateSecondaryActions>
  </div>
</div>
`;

exports[`EmptyState Main variant large 1`] = `
<div
  className="pf-c-empty-state pf-m-lg"
>
  <div
    className="pf-c-empty-state__content"
  >
    <Title
      headingLevel="h3"
      size="md"
    >
      EmptyState large
    </Title>
  </div>
</div>
`;

exports[`EmptyState Main variant small 1`] = `
<div
  className="pf-c-empty-state pf-m-sm"
>
  <div
    className="pf-c-empty-state__content"
  >
    <Title
      headingLevel="h3"
      size="md"
    >
      EmptyState small
    </Title>
  </div>
</div>
`;
